@@ -21,6 +21,13 @@
 
 2014-06-26  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
+        * Version 0.9999999917 released.
+
+        * New version of Term::Menus paired with this release.
+
+
+2014-06-26  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
         * Version 0.9999999916 released.
 
         * New version of Term::Menus paired with this release.
